<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_image_grid"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription=""
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/product_name_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/product_price_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            android:textAlignment="center" />
        <TextView
            android:id="@+id/product_rating_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_rating"
            android:textAlignment="center" />
        <Button
            android:id="@+id/btn_see_details_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_button_text"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
