<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:padding="5dp"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@id/product_image"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/product_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/product_image"
            android:drawablePadding="2dp"
            android:text="@string/product_rating"
            app:drawableStartCompat="@drawable/star" />
        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/product_rating"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_toEndOf="@id/product_image"
            android:drawablePadding="2dp"
            android:text="@string/product_price"
            />

        <Button
            android:id="@+id/btn_see_details"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_below="@id/product_rating"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/product_image"
            android:drawablePadding="2dp"
            android:text="@string/card_button_text"
            />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
